--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
-    <title>Octopus Console</title>
+    <title>Ai Genie</title>
   </head>
+
   <body>
     <div id='root'></div>
   </body>
+
 </html>
